# LaBraM

./: .gitignore  engine_for_finetuning.py  engine_for_pretraining.py  engine_for_vqnsp.py  finetune_args.py  finetune_datasets.py  finetune_setup.py  modeling_finetune.py  modeling_pretrain.py  modeling_vqnsp.py  norm_ema_quantizer.py  pyproject.toml  requirements.txt  run_class_finetuning.py  run_labram_pretraining.py  run_vqnsp_training.py  runner_common.py  utils.py
.github/workflows/: ci.yml
data_processor/: dataset.py
docs/: duplicate-logic-audit.md
labram/engines/: finetune.py  pretrain.py  vqnsp.py
labram/models/: finetune.py  pretrain.py  vqnsp.py
labram/runners/: common.py  finetune.py  finetune_datasets.py  finetune_setup.py  pretrain.py  vqnsp.py
labram/utils/: __init__.py  channels.py  checkpoint.py  cli.py  distributed.py  logging.py
tests/: test_channels.py  test_datasets.py  test_engine_pretraining.py  test_engine_vqnsp.py  test_finetune.py  test_finetune_setup.py  test_modeling_finetune.py  test_runner_common.py
utils/: __init__.py  channels.py  checkpoint.py  cli.py  datasets_tuh.py  logging.py  metrics.py  training.py
