[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labram"
version = "0.1.0"
description = "Large Brain Model for Learning Generic Representations with Tremendous EEG Data in BCI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC BY-NC 4.0" }
# Runtime dependencies (torch, timm, einops, h5py, pyhealth, scikit-learn,
# scipy, pandas, tensorboard, mne, numpy) intentionally not pinned here
# because the project relies on environment-specific torch builds. Use
# the README install instructions or your own environment manager.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pyflakes"]

[tool.setuptools.packages.find]
include = ["labram*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
